# analytics-platform

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
functions/: Cargo.toml  auth.ts  authorizer.ts  model.ts  package-lock.json  package.json  profile.ts  team_add.ts  team_create.ts  tool_create.ts
functions/auth/: Cargo.toml
functions/auth/src/: auth.rs  main.rs
functions/authorizer/: Cargo.toml
functions/authorizer/src/: main.rs
functions/model/: Cargo.toml
functions/model/src/: auth_session.rs  lib.rs  session.rs  team.rs  user.rs
functions/profile/: Cargo.toml
functions/profile/src/: main.rs
functions/team_add/: Cargo.toml
functions/team_add/src/: main.rs
functions/team_create/: Cargo.toml
functions/team_create/src/: main.rs
lib/: analytics-platform-stack.ts  api.ts  data.ts  ingress.ts  network.ts
test/: analytics-platform.test.ts  api.test.ts  data.test.ts
