[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.10.0"
aws-sdk-dynamodb = "0.10.0"
chrono = "0.4.19"
rand = "0.8.5"
uuid = { version = "1.0.0", features = ["v4"] }
