[package]
name = "team_add"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.10.0"
aws-sdk-dynamodb = "0.10.0"
lambda_http = "0.5.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.80"
tokio = "1.18.0"
model = { path = "../model" }
