[package]
name = "team_create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.10.0"
aws-sdk-dynamodb = "0.10.0"
chrono = "0.4.19"
lambda_http = "0.5.1"
rand = "0.8.5"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.80"
tokio = "1.18.0"
uuid = { version = "1.0.0", features = ["v4"] }
model = { path = "../model" }
